--- a/fujifilm/index.html
+++ b/fujifilm/index.html
@@ -1031,17 +1031,117 @@
         <div class="popup">
             <button class="popup__close js-close-popup"></button>
             <div class="popup__body">
-                <a href="#" class="popup__item">
-                    <img loading="lazy" src="" alt="Лого магазина" class="popup__item-img">
+                <a href="https://www.yarkiy.ru/goods/40547-fujifilm-x-s10-body" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/yarkiy-mini.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Москва, Санкт-Петербург, Ростов-на-дону, Выборг, Краснодар</span>
+                </a>
+                <a href="https://www.onlinetrade.ru/catalogue/tsifrovye_fotoapparaty_so_smennoy_optikoy-c268/fujifilm/tsifrovoy_fotoapparat_fujifilm_x_s10_body_black_16670041-2349842.html" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/onlinetr.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Москва, Краснодар, Нижний Новогород, Самара, Тула</span>
+                </a>
+                <a href="https://www.mvideo.ru/products/fotoapparat-sistemnyi-fujifilm-x-s10-body-10025361" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/mvideo.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Вся Россия</span>
+                </a>
+                <a href="https://www.dns-shop.ru/product/4295494f11d23332/fujifilm-x-s10-kit-18-55/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/dns.jpg" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Вся Россия</span>
+                </a>
+                <a href="https://www.svyaznoy.ru/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/svyaznoy.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Вся Россия</span>
+                </a>
+                <a href="https://pixel24.ru/catalog/view/id/55671" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/pxl24-3.png" alt="Лого магазина" class="popup__item-img">
                     <span class="popup__item-location">Москва</span>
                 </a>
-                <a href="#" class="popup__item">
-                    <img loading="lazy" src="" alt="Лого магазина" class="popup__item-img">
+                <a href="https://photosale.ru/fototechnika/fotoapparaty_tsifrovye/fujifilm_x_s10_body_black/?sphrase_id=451888" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/fotosale.jpg" alt="Лого магазина" class="popup__item-img">
                     <span class="popup__item-location">Москва</span>
                 </a>
-                <a href="#" class="popup__item">
-                    <img loading="lazy" src="" alt="Лого магазина" class="popup__item-img">
+                <a href="https://www.kutuzov-photo.ru/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/kutuzov.png" alt="Лого магазина" class="popup__item-img">
                     <span class="popup__item-location">Москва</span>
+                </a>
+                <a href="https://asn-foto.ru/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/asnfoto.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Москва</span>
+                </a>
+                <a href="https://www.ligafoto.ru/catalog/id-64621/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/liga-foto.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Москва</span>
+                </a>
+                <a href="https://www.olimp.ru/shop/sgroup91101/item9110100003/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/olimp.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Обнинск, Калуга</span>
+                </a>
+                <a href="https://www.intel-foto.ru/catalog/bezzerkalnye-fotokamery/fujifilm/tsifrovoj-fotoapparat-fujifilm-x-s10-body-34596/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/intelfoto.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Екатеринбур г, Челябинск, Тюмень</span>
+                </a>
+                <a href="https://www.technocity.ru/catalog/detail/763474/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/tcd120x100.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Новосибирск</span>
+                </a>
+                <a href="https://foto74.ru/fotoapparat-so-smennoy-optikoy-fujifilmx-s10-body/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/fotolux.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Челябинск</span>
+                </a>
+                <a href="https://shx.ru/catalog/fototekhnika_i_videotekhnika/bezzerkalki_so_smennoy_optikoy/fotoapparat-Fujifilm-X-S10-body-chernyy" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/shx.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Пермь, Ижевск, Челябинск</span>
+                </a>
+                <a href="https://photopark.ru/catalog/item/tsifrovaya-fotokamera-fujifilm-x-s10-body-i3938" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/msccity.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Махачкала</span>
+                </a>
+                <a href="https://fotomen.ru/bezzerkalnaya-fotokamera-fujifilm-x-s10-body-black/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/fotomen.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Уфа</span>
+                </a>
+                <a href="https://digital30.ru/foto-video-tekhnika-120/fotoapparaty-4/fotoapparaty-fujifilm-14/fujifilm-x-s10-body-black" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/cifrovoy.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Астрахань</span>
+                </a>
+                <a href="https://binar-shop.ru/catalog/product/fotoapparat_so_smennoy_optikoy_fujifilm_x_s10_kit_18_55mm_f_2_8_4_0_ois_black/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/binar.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Красноярск</span>
+                </a>
+                <a href="https://www.vlfoto.ru/product/tsifrovoy-bezzerkalnyy-fotoapparat-x-s10-body-black" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/vl-foto.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Владивосток</span>
+                </a>
+                <a href="http://fotik-npd.ru/fotoapparati/cifrovie-fotoapparati-so-smennoj-optikoj/fotoapparatiso-smennoj-optikoj-fujifilm/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/photik.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Смоленск</span>
+                </a>
+                <a href="https://openschool.biz/product/fujifilm-x-s10/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/otkr-shkola.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Казань</span>
+                </a>
+                <a href="https://fotomagazin.ru/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/logo-photo-mgzn.jpg" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Воронеж</span>
+                </a>
+                <a href="http://acomplex.ru/katalog/fototehnika/fotoapparaty/fujifilm/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/logo-dw.gif" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Самара, Казань</span>
+                </a>
+                <a href="https://interfoto.by/fotoapparaty/fujifilm-foto/x-series/xs10/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/interfoto.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Минск</span>
+                </a>
+                <a href="https://vega.am/hy/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/logo-vega.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Ереван</span>
+                </a>
+                <a href="https://dw.kz/catalog/digital-cameras/SLR/tsifrovoy_fotoapparat_fujifilm_x_s10_black_body/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/logo-dw.gif" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Караганда</span>
+                </a>
+                <a href="https://www.technodom.kz/" class="popup__item" target="_blank">
+                    <img loading="lazy" src="./img/logos/td.png" alt="Лого магазина" class="popup__item-img">
+                    <span class="popup__item-location">Алматы, Нурсултан и др.</span>
                 </a>
             </div>
         </div>
