--- a/fujifilm/index.html
+++ b/fujifilm/index.html
@@ -1731,6 +1731,12 @@
         </div>
     </div>
 
+    <div class="popup__overlay js-popup-player">
+        <div class="popup popup_video">
+            
+        </div>
+    </div>
+
     <script src="./js/jQuery.min.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
 </body>
