--- a/fujifilm/index.html
+++ b/fujifilm/index.html
@@ -1732,8 +1732,8 @@
     </div>
 
     <div class="popup__overlay js-popup-player">
+        <button class="popup__close js-close-popup"></button>
         <div class="popup popup_video">
-            
         </div>
     </div>
 
