--- a/fujifilm/index.html
+++ b/fujifilm/index.html
@@ -428,7 +428,7 @@
                         </div>
                         <div class="row row_middle mt-50">
                             <div class="column">
-                                <video class="column__video video-unloaded" data-src="./video/tone-adjustment.mp4" type="video/mp4" preload="none" playsinline muted loop autoplay></video>
+                                <video class="column__video video-unloaded" data-src="./video/tone-adjustment.mp4" preload="none" playsinline muted loop autoplay></video>
                             </div>
                             <div class="column">
                                 <picture class="column__img">
@@ -503,7 +503,7 @@
             <div class="container mt-50">
                 <p class="text">Многие современные камеры снимают в 4K, но X-S10 уникальна тем, что изначально она записывает в разрешении 6K со всей площади матрицы, а затем преобразует видео в 4К. Используя эти данные, камера передает кадры с высокой детализацией и низким уровнем шума.  Она также поддерживает съемку в формате DCI с соотношением сторон 17:9, что позволяет получить кинематографический вид.</p>
                 <p class="text text_mt30">Непревзойденный цвет Fujifilm приносит свои выгоды для видео. При создании фильмов вы можете использовать любую из 18 различных режимов моделирования пленок, чтобы добавить уникальный вид к отснятому материалу, включая режим ETERNA. Именно на эту киноплёнку были сняты многие шедевры кино. Помимо этого, для более углубленной работы в дальнейшей постобработке доступен режим съемки в формате F-Log.</p>
-                <video playsinline muted loop autoplay data-src="./video/F-log.mp4" type="video/mp4" preload="none" class="filming__img mt-50 mb-50 video-unloaded"></video>
+                <video playsinline muted loop autoplay data-src="./video/F-log.mp4" preload="none" class="filming__img mt-50 mb-50 video-unloaded"></video>
             </div>
             <div class="filming__colored mb-50">
                 <div class="container">
@@ -515,7 +515,7 @@
                             </article>
                         </div>
                         <div class="column column_big">
-                            <video playsinline muted loop autoplay preload="none" data-src="./video/1080_240P.mp4" type="video/mp4" class="column__video video-unloaded"></video>
+                            <video playsinline muted loop autoplay preload="none" data-src="./video/1080_240P.mp4" class="column__video video-unloaded"></video>
                         </div>
                     </div>
                 </div>
@@ -523,7 +523,7 @@
             <div class="container">
                 <h3 class="section__subtitle">Все это со стабилизацией!</h3>
                 <p class="text text_mt30"> <img loading="lazy" class="float-img float-img_left" src="./img/float-img_5.png" alt="Изображение в тексте"> В дополнение к встроенной стабилизации изображения (IBIS), включение режима цифровой стабилизации изображения (DIS) позволит мощно компенсировать дрожание камеры даже при ходьбе. Режим форсирования стабилизации (IS Mode Boost) обеспечивает еще большую стабилизацию, почти устраняя дрожание камеры при съемке с рук, как если бы вы снимали видео с использованием штатива.</p>
-                <video playsinline muted loop autoplay preload="none" data-src="./video/DIS.mp4" type="video/mp4" class="filming__img mt-50 video-unloaded"></video>
+                <video playsinline muted loop autoplay preload="none" data-src="./video/DIS.mp4" class="filming__img mt-50 video-unloaded"></video>
                 <h3 class="section__subtitle mt-50">X-S10 любит снимать видео!</h3>
                 <p class="text text_mt30">Корпус камеры разработан с учетом того, что на нее будут снимать видео. К блоку матрицы подведен радиатор, который охлаждает ее и позволяет снимать видео продолжительное время.</p>
             </div>
@@ -554,7 +554,7 @@
                 <div class="row__container row_mt50">
                     <div class="row row_between row_middle">
                         <div class="column column_big">
-                            <video playsinline muted loop autoplay preload="none" data-src="./video/face_eye_AF.mp4" type="video/mp4" class="column__video hybrid__img_left video-unloaded"></video>
+                            <video playsinline muted loop autoplay preload="none" data-src="./video/face_eye_AF.mp4" class="column__video hybrid__img_left video-unloaded"></video>
                         </div>
                         <div class="column column_medium">
                             <article class="text-block">
@@ -571,12 +571,12 @@
                             </article>
                         </div>
                         <div class="column column_big">
-                            <video playsinline muted loop autoplay preload="none" data-src="./video/low_light.mp4" type="video/mp4" class="column__video hybrid__img_right video-unloaded"></video>
+                            <video playsinline muted loop autoplay preload="none" data-src="./video/low_light.mp4" class="column__video hybrid__img_right video-unloaded"></video>
                         </div>
                     </div>
                     <div class="row row_mt50 row_end row_between">
                         <div class="column ">
-                            <video playsinline muted loop autoplay preload="none" data-src="./video/Tracking-AF.mp4" type="video/mp4" class="column__video video-unloaded"></video>
+                            <video playsinline muted loop autoplay preload="none" data-src="./video/Tracking-AF.mp4" class="column__video video-unloaded"></video>
                         </div>
                         <div class="column column_medium">
                             <article class="text-block">
@@ -723,7 +723,7 @@
                 <div class="container container_bigger">
                     <div class="row row_middle">
                         <div class="column">
-                            <video class="column__video video-unloaded" preload="none" data-src="./video/X-S10_BOUSHIN_anim_0915_01.mp4" type="video/mp4" playsinline muted loop autoplay></video>
+                            <video class="column__video video-unloaded" preload="none" data-src="./video/X-S10_BOUSHIN_anim_0915_01.mp4" playsinline muted loop autoplay></video>
                         </div>
                         <div class="column column_normal">
                             <article class="text-block">
@@ -771,7 +771,7 @@
                             <p class="text text_mt50">Используя Bluetooth или Wi-Fi, вы можете поделиться своими воспоминаниями с друзьями и семьей в социальных сетях, подключив и загрузив свои изображения в удаленное приложение FUJFILM Camera Remote или мгновенно подключить и распечатать избранное с любого совместимого принтера instax ™</p>
                         </div>
                         <div class="column">
-                            <video class="column__video video-unloaded" preload="none" data-src="./video/instax.mp4" type="video/mp4" playsinline muted loop autoplay></video>
+                            <video class="column__video video-unloaded" preload="none" data-src="./video/instax.mp4" playsinline muted loop autoplay></video>
                         </div>
                     </div>
                     <div class="row row_triple row_between row_mt50">
