--- a/onlyfans/index.html
+++ b/onlyfans/index.html
@@ -39,7 +39,33 @@
         </div>
     </header>
     <main class="main">
-
+        <section class="about">
+            <div class="container">
+                <div class="about__wrap">
+                    <div class="about__slider slider">
+                        <div class="slider__top">
+                            <span class="slider__title">Top Onlyfans</span>
+                            <div class="slider__controls">
+                                <button class="button slider__control slider__control_prev"></button>
+                                <button class="button slider__control slider__control_next"></button>
+                            </div>
+                        </div>
+                        <div class="slider__body">
+                            
+                        </div>
+                    </div>
+                    <div class="about__main">
+                        <div class="about__content">
+                            <h1 class="about__title">Sliv Onlyfans</h1>
+                            <p class="about__subtitle">первый сайт, в котором собраны все доступы к аккаунтам в одной группе.</p>
+                            <p class="about__text">Теперь не нужно каждый раз покупать сливы и переплачивать - оплатите посписку один раз и наслаждайтесь сразу всеми моделями бессрочно. </p>
+                            <p class="about__text">На нашем сайте предложено три варианта подписки: <br><span class="about__text_medium">VIP доступ, премиум-доступ и демо доступ.</span></p>
+                            <p class="about__text">Ознакомиться и оформить доступ к любой приватке можно на главной странице сайта.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <div class="prices">
             <div class="container">
                 <div class="prices__wrap">
@@ -49,6 +75,7 @@
                         <ul class="tariff__list">
                             <li class="tariff__item">Слив одной модели</li>
                         </ul>
+                        <a href="#" target="_blank" class="button button_blue tariff__button">Купить доступ</a>
                     </article>
                     <article class="tariff">
                         <h3 class="tariff__name">DEMO</h3>
@@ -57,20 +84,26 @@
                             <li class="tariff__item">Слив одной модели</li>
                             <li class="tariff__item">Слив одной</li>
                         </ul>
+                        <a href="#" target="_blank" class="button button_blue tariff__button">Купить доступ</a>
                     </article>
                     <article class="tariff">
                         <h3 class="tariff__name">Premium</h3>
                         <span class="tariff__description">Подписка $15.00 навсегда</span>
                         <ul class="tariff__list">
                             <li class="tariff__item">Слив одной модели</li>
+                            <li class="tariff__item">Слив одной модели</li>
                         </ul>
+                        <a href="#" target="_blank" class="button button_pink tariff__button">Купить доступ</a>
                     </article>
                     <article class="tariff">
                         <h3 class="tariff__name">VIP</h3>
                         <span class="tariff__description">Подписка $50.00 навсегда</span>
                         <ul class="tariff__list">
                             <li class="tariff__item">Слив одной модели</li>
+                            <li class="tariff__item">Слив одной модели</li>
+                            <li class="tariff__item">Слив одной модели</li>
                         </ul>
+                        <a href="#" target="_blank" class="button button_pink tariff__button">Купить доступ</a>
                     </article>
                 </div>
             </div>
